ajout img + nom Delmerie

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <img src="img/julien.jpeg" />
         <h4>Michaël</h4>
         <img src="img/michael.png">
+        <h4>Delmerie</h4>
+        <img src="img/djr.png">
         <hr />
         Voici un lien vers <a href="dev.html">la page de dev</a>
         <br>
